test/org/midica/testfiles/failing/const-without-dollar.midica
INCLUDE inc/instruments.midica

CONST xy = z
